--- a/style.css
+++ b/style.css
@@ -97,6 +97,20 @@ h3 {
 	text-align: center;
 }
 
+blockquote {
+	text-alignment: right;
+	font-family: 'Lato', sans-serif;
+	font-size: 2rem;
+	background-color: #A8A8A8;
+	color: white;
+	margin: 3rem;
+	padding: 1rem;
+	text-align: center;
+	border-radius: 25px;
+	float: left;
+	clear: both;
+}
+
 /*Mobile - This affects screens that are up to 500px wide*/
 @media (max-width: 1100px) {
 	.banner{
