--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ background-size: 100% auto;
 
 p {
 	font-family: 'Lato', sans-serif;
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 	margin-bottom: 0;
+	line-height: 1.5rem;
 }
 
 .flex {
