--- a/style.css
+++ b/style.css
@@ -112,6 +112,24 @@ blockquote {
 	clear: both;
 }
 
+.blockquote2{
+	text-alignment: right;
+	font-family: 'Lato', sans-serif;
+	font-size: 2rem;
+	border: solid;
+	border-width: medium;
+	border-color: grey;
+	margin: 3rem;
+	margin-right: 5rem;
+	margin-left: 5rem;
+	padding: 1rem;
+	text-align: center;
+	border-radius: 25px;
+	float: left;
+	clear: both;
+}
+
+
 /*Mobile - This affects screens that are up to 500px wide*/
 @media (max-width: 1100px) {
 	.banner{
