--- a/style.css
+++ b/style.css
@@ -40,6 +40,13 @@ p {
 	line-height: 1.5rem;
 }
 
+.byline{
+	text-align: center;
+	font-size: 1.3rem;
+	margin-top: 0;
+	margin-bottom: 2rem;
+}
+
 .flex {
     display: flex;
   text-wrap: none;
@@ -98,9 +105,18 @@ h3 {
 	text-align: center;
 }
 
+h5{
+	font-family: 'Lato', sans-serif;
+	font-size: 1.1rem;
+	margin-bottom: 2rem;
+	text-align: center;
+	margin-top: 0;
+	font-weight:bolder;
+}
+
 h6 {
 	font-family: 'Lato', sans-serif;
-	font-size: 0.9rem;
+	font-size: 1.1rem;
 	margin-bottom: 2rem;
 	text-align: center;
 	color: #635F5F;
