--- a/style.css
+++ b/style.css
@@ -106,12 +106,12 @@ h3 {
 }
 
 h5{
-	font-family: 'Lato', sans-serif;
+	font-family: 'Bold Lato', sans-serif;
 	font-size: 1.1rem;
 	margin-bottom: 2rem;
 	text-align: center;
 	margin-top: 0;
-	font-weight:bolder;
+	color: #333333;
 }
 
 h6 {
@@ -152,11 +152,15 @@ blockquote {
 	border-radius: 25px;
 	float: left;
 	clear: both;
+	line-height: 2.6rem;
 }
 
+.voteNumber{
+	font-family: 'Bold Lato', sans-serif;
+}
 
 /*Mobile - This affects screens that are up to 500px wide*/
-@media (max-width: 1100px) {
+@media (max-width: 900px) {
 	.banner{
 		width: 100%;
 	}
@@ -171,6 +175,15 @@ blockquote {
 	}
 	.infogram iframe{
 		width: 100%;
+	}
+	.flex{
+		width: 100%
+	}
+	.banner{
+		display: none;
+	}
+	.banner2{
+		display: none;
 	}
 }
 
